Fix Spacing :lipstick:
fixed spacing of link in final

--- a/idm241/beta/beta.css
+++ b/idm241/beta/beta.css
@@ -40,8 +40,7 @@ h1 {
     font-size: 48px;
     color: var(--brown);
     text-align: center;
-    padding: 50px 0 25px;
-    margin: 0;
+    margin: 50px 0 25px;
 }
 
 
