--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -40,8 +40,7 @@ h1 {
     font-size: 48px;
     color: var(--brown);
     text-align: center;
-    padding: 50px 0 25px;
-    margin: 0;
+    margin: 50px 0 25px;
 }
 
 
@@ -74,6 +73,7 @@ h3 {
     font-family: 'merriweather';
     font-size: 24px;
     color: var(--brown);
+    margin: 50px 0;
 }
 
 .title a {
